docs-archive/apache-airflow-providers-amazon/9.15.0/_sources/_api/airflow/providers/amazon/aws/transfers/hive_to_dynamodb/index.rst.txt
airflow.providers.amazon.aws.transfers.hive_to_dynamodb
=======================================================

.. py:module:: airflow.providers.amazon.aws.transfers.hive_to_dynamodb

.. autoapi-nested-parse::

   This module contains operator to move data from Hive to DynamoDB.



Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.transfers.hive_to_dynamodb.HiveToDynamoDBOperator


Module Contents
---------------

.. py:class:: HiveToDynamoDBOperator(*, sql, table_name, table_keys, pre_process = None, pre_process_args = None, pre_process_kwargs = None, region_name = None, schema = 'default', hiveserver2_conn_id = 'hiveserver2_default', aws_conn_id = 'aws_default', df_type = 'pandas', **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.version_compat.BaseOperator`


   Moves data from Hive to DynamoDB.

   Note that for now the data is loaded into memory before being pushed
   to DynamoDB, so this operator should be used for smallish amount of data.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/transfer:HiveToDynamoDBOperator`

   :param sql: SQL query to execute against the hive database. (templated)
   :param table_name: target DynamoDB table
   :param table_keys: partition key and sort key
   :param pre_process: implement pre-processing of source data
   :param pre_process_args: list of pre_process function arguments
   :param pre_process_kwargs: dict of pre_process function arguments
   :param region_name: aws region name (example: us-east-1)
   :param schema: hive database schema
   :param hiveserver2_conn_id: Reference to the
       :ref: `Hive Server2 thrift service connection id <howto/connection:hiveserver2>`.
   :param aws_conn_id: aws connection
   :param df_type: DataFrame type to use ("pandas" or "polars").


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('sql',)



   .. py:attribute:: template_ext
      :type:  collections.abc.Sequence[str]
      :value: ('.sql',)



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: ui_color
      :value: '#a0e08c'



   .. py:attribute:: sql


   .. py:attribute:: table_name


   .. py:attribute:: table_keys


   .. py:attribute:: pre_process
      :value: None



   .. py:attribute:: pre_process_args
      :value: None



   .. py:attribute:: pre_process_kwargs
      :value: None



   .. py:attribute:: region_name
      :value: None



   .. py:attribute:: schema
      :value: 'default'



   .. py:attribute:: hiveserver2_conn_id
      :value: 'hiveserver2_default'



   .. py:attribute:: aws_conn_id
      :value: 'aws_default'



   .. py:attribute:: df_type
      :value: 'pandas'



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



